# NeuralNet

./: .gitignore  CMakeLists.txt  NeuralNet3.0.sln
NeuralNet3.0/: Network.cpp  Network.h  NeuralNet3.0.vcxproj  NeuralNet3.0.vcxproj.filters  dump.cpp  main.cpp  mnist.cpp  mnist.h  range.h  zip.h
script/: format
src/: CMakeLists.txt  Network.cpp  Network.hpp  main.cpp  mnist.cpp  mnist.hpp
